crates/lemnos-macros/tests/ui/configured_duplicate_endpoint_name.stderr
error: duplicate configured endpoint name `sensor`
 --> tests/ui/configured_duplicate_endpoint_name.rs:9:5
  |
9 |     gyro_address: u16,
  |     ^^^^^^^^^^^^
